# wine-quality

./: LICENSE  README.md  SOMM_ReadMe.md  app.py  pyproject.toml  requirements.txt
data/: sample.csv
src/: charts.py  data.py  filters.py  layouts.py
