[project]
name = "Wine Quality"
version = "1.0.0"
description = "<UPDATE ME>"
authors = [
  {name = "Your Name", email = "you@example.com"},
  {name = "Your Name", email = "you@example.com"},
  {name = "Your Name", email = "you@example.com"}
]
requires-python = ">=3.14"
dependencies = [
    "streamlit (>=1.54.0,<2.0.0)",
    "pandas (>=2.0.0,<3.0.0)",
    "numpy (>=2.4.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
